--- a/style.css
+++ b/style.css
@@ -16,3 +16,15 @@ html,body{
     height: 500px;
     width: 900px
 }
+.imagediv{
+    position: absolute;
+    width: 200px;
+    height: 150px;
+    background-color:greenyellow ;
+    overflow: hidden;
+}
+.imagediv img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
