--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ html,body{
     position: absolute;
     width: 200px;
     height: 150px;
-    background-color:greenyellow ;
+    /* background-color:greenyellow ; */
     overflow: hidden;
 }
 .imagediv img{
+    transform: translate(100%);
     height: 100%;
     width: 100%;
     object-fit: cover;
