--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ html,body{
 .imagediv{
     position: absolute;
     width: 200px;
-    height: 150px;
+    height: 300px;
     /* background-color:greenyellow ; */
     overflow: hidden;
 }
 .imagediv img{
-    transform: translate(100%);
+    transform: translateY(100%);
     height: 100%;
     width: 100%;
     object-fit: cover;
