--- a/style.css
+++ b/style.css
@@ -1,43 +1,50 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html,body{
-    height:100%;
-    width:100%;
+
+html,
+body {
+    height: 100%;
+    width: 100%;
     background-color: #37a0e2;
-} 
-.center{
+}
+
+.center {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    
+
     height: 500px;
     width: 900px;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 
 }
-.center h1{
+
+.center h1 {
     font-family: helvetica;
-    font-size:300px
+    font-size: 300px
 }
-.center h3{
-    text-transform:uppercase;
+
+.center h3 {
+    text-transform: uppercase;
     font-family: helvetica;
-    font-size:100px
+    font-size: 100px
 }
-.imagediv{
+
+.imagediv {
     position: absolute;
     width: 200px;
     height: 280px;
-    /* background-color:greenyellow ; */
+
     overflow: hidden;
 }
-.imagediv img{
+
+.imagediv img {
     transform: translateY(100%);
     height: 100%;
     width: 100%;
